--- a/public/views/site/_footer.html.erb
+++ b/public/views/site/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="span12">
       <!-- <p><% if AppConfig[:enable_frontend] and not proxy_localhost? %>View <a href="<%= AppConfig[:frontend_proxy_url] %>">Staff Interface</a> | <% end %>Visit <a href="http://archivesspace.org">ArchivesSpace.org</a> | <%= ASConstants.VERSION %></p> -->
       <p><% if AppConfig[:enable_frontend] and not proxy_localhost? %>View <a href="<%= AppConfig[:frontend_proxy_url] %>">Staff Interface</a> | <% end %>Powered by ArchivesSpace <%= ASConstants.VERSION %> |
-        <%= link_to(I18n.t("contactus.name.short"), I18n.t("contactus.url")) %></p>
+        <%= link_to(I18n.t("plugins.jhu_public.contactus.name.short"), I18n.t("plugins.jhu_public.contactus.url")) %></p>
     </div>
   </div>
 </div>
