--- a/public/views/site/index.html.erb
+++ b/public/views/site/index.html.erb
@@ -9,9 +9,9 @@
       
       <h3><%= I18n.t("brand.welcome_message") %></h3>
       <p><%= I18n.t("brand.welcome_search_label",
-                    :instrepo => link_to(I18n.t("instrepo.name.short"), I18n.t("instrepo.url")),
-                    :datarepo => link_to(I18n.t("datarepo.name.short"), I18n.t("datarepo.url")),
-                    :levycoll => link_to(I18n.t("levycoll.name.short"), I18n.t("levycoll.url"))
+                    :instrepo => link_to(I18n.t("plugins.jhu_public.instrepo.name.short"), I18n.t("plugins.jhu_public.instrepo.url")),
+                    :datarepo => link_to(I18n.t("plugins.jhu_public.datarepo.name.short"), I18n.t("plugins.jhu_public.datarepo.url")),
+                    :levycoll => link_to(I18n.t("plugins.jhu_public.levycoll.name.short"), I18n.t("plugins.jhu_public.levycoll.url"))
              ).html_safe %></p>
 
       <div class="tab-content">
