--- a/public/views/search/_inline_results.html.erb
+++ b/public/views/search/_inline_results.html.erb
@@ -6,7 +6,7 @@
     <thead>
     <tr>
       <th><%= I18n.t("search_results.result_title") %></th>
-      <th><%= I18n.t("search_sorting.identifier") %></th>
+      <th><%= I18n.t("plugins.jhu_public.identifier") %></th>
     </tr>
     </thead>
     <tbody class="results-list">
