better test for resource presence and safe use of displayId

--- a/public/views/search/_inline_results.html.erb
+++ b/public/views/search/_inline_results.html.erb
@@ -37,7 +37,7 @@
 
           </td>
           <td style="width: 1px; margin: 0; white-space:nowrap;">
-            <%= resource.present? ? displayId(resource, sep='.') : "" %>
+            <%= !resource.nil? ? displayId(resource, sep='.') : "" %>
           </td>
         </tr>
 
