added heading for app menu when collapsed, increase JHU logo vertical spacing, fix JHU navbar link alignment

--- a/public/views/site/_branding.html.erb
+++ b/public/views/site/_branding.html.erb
@@ -1,7 +1,9 @@
 <div class="navbar" id="jhu-main-nav">
   <div class="navbar-inner">
     <div class="container">
-      <span class="jhu-nav-heading" id="jhu-nav-heading-text"><%= I18n.t("plugins.jhu_public.jhu_nav.heading") %></span>
+      <span class="jhu-nav-heading" id="jhu-nav-heading-text" data-toggle="collapse" data-target="#jhu-navbar">
+        <%= I18n.t("plugins.jhu_public.jhu_nav.menu_heading") %>
+      </span>
       <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="#jhu-navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
