--- a/public/views/site/_header.html.erb
+++ b/public/views/site/_header.html.erb
@@ -1,6 +1,9 @@
 <div class="navbar">
   <div class="navbar-inner">
     <div class="container">
+      <span class="app-nav-heading" id="app-nav-heading-text" data-toggle="collapse" data-target="#app-navbar">
+        <%= I18n.t("plugins.jhu_public.app_nav.menu_heading") %>
+      </span>
       <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="#app-navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
