--- a/public/views/site/_branding.html.erb
+++ b/public/views/site/_branding.html.erb
@@ -24,7 +24,8 @@
 
 <div class="container">
   <div class="jhu-branding-org">
-    <%= image_tag "images/libraries.logo.small.horizontal.blue.png", :alt => I18n.t("brand.title") %>
+    <%#= image_tag "images/libraries.logo.small.horizontal.blue.png", :alt => I18n.t("brand.title") %>
+    <img src="/assets/images/libraries.logo.small.horizontal.blue.png" alt="Johns Hopkins University logo">
   </div>
   <div class="jhu-branding-app pull-right">
     <%#= image_tag "archivesspace/archivesspace.png", :alt => I18n.t("brand.title") %>
