--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -1,6 +1,2 @@
-<%#= stylesheet_link_tag "stylesheets/theme-bootstrap.css",
-                        "stylesheets/theme-application.css"
-%>
-
-<link href="/assets/stylesheets/theme-bootstrap.css" rel="stylesheet" />
+<!-- <link href="/assets/stylesheets/theme-bootstrap.css" rel="stylesheet" /> -->
 <link href="/assets/stylesheets/theme-application.css" rel="stylesheet" />
