--- a/public/views/site/_footer.html.erb
+++ b/public/views/site/_footer.html.erb
@@ -1,6 +1,13 @@
 <div class="container footer">
   <div class="row-fluid">
-    <div class="span12">
+    <div class="span8" id="contact_us_block">
+      <h1>Contact Us</h1>
+      <p>Phone: 410-516-8348</p>
+      <p>Email: <a href="<%= "mailto:specialcollections@lists.jhu.edu?subject=[ArchivesSpace] #{request.original_url}"%>">
+        specialcollections@lists.jhu.edu</a></p>
+      <p>This page: <%= request.original_url %></p>
+    </div>
+    <div class="span4">
       <p><% if AppConfig[:enable_frontend] and not proxy_localhost? %>View <a href="<%= AppConfig[:frontend_proxy_url] %>">Staff Interface</a> | <% end %>Powered by ArchivesSpace <%= ASConstants.VERSION %></p>
     </div>
   </div>
