--- a/public/views/site/_header.html.erb
+++ b/public/views/site/_header.html.erb
@@ -24,7 +24,7 @@
             <li <% if params["type"]==="agent"%> class="active" <% end%>><%= link_to I18n.t("agent._plural"),  {:controller => :search, :action => :search, :type => "agent"} %></li>
             <!-- <li <% if params["type"]==="classification"%> class="active" <% end%>><%= link_to I18n.t("classification._plural"),  {:controller => :search, :action => :search, :type => "classification"} %></li> -->
             <li class="contact-us">
-              <%= link_to(I18n.t("plugins.jhu_public.contactus.name.short"), I18n.t("plugins.jhu_public.contactus.url"), :title => "Contact Us for url: #{URI.unescape(request.original_url)}") %>
+              <%= link_to(I18n.t("plugins.jhu_public.contactus.name.short"), '#contact_us_block', :title => "Contact Us for: #{URI.unescape(request.original_url)}") %>
             </li>
             <li class="divider-vertical pull-right"></li>
             <% if not current_page?(root_url) %>
