--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -1,3 +1,2 @@
-<!-- <link href="/assets/stylesheets/theme-bootstrap.css" rel="stylesheet" />
+<!-- <link href="/assets/stylesheets/theme-bootstrap.css" rel="stylesheet" /> -->
 <link href="/assets/stylesheets/theme-application.css" rel="stylesheet" />
--->
